--- a/_posts/2015-08-12-1.md
+++ b/_posts/2015-08-12-1.md
@@ -11,21 +11,21 @@ tags: [Vim,Markdown]
 とりあえず、Markdownのシンタックスとプレビューができるようにする。
 私は、Vimのプラグインを管理するためのNeoBundleを入れてあるので、それを利用する。  
 
-#**使うプラグイン**  
+### **使うプラグイン**  
 * vim-markdown  
 * previm  
 * open-browser.vim  
 
-#**インストール**  
+### **インストール**  
 プラグインを入れるため、.vimrcに以下の3行を追加する。  
 <script src="https://gist.github.com/taroooyan/455147785f71284b7a24.js"></script>
 
 あとは保存し、インストールします。  
 
-#**プレビュー**  
+### **プレビュー**  
 MarkdownファイルをVimで開いている状態で:PrevimOpenコマンドを実行すれば、ブラウザが開き、今の状態を確認することができます。また、:wで内容を保存すれば、リアルタイムでブラウザの方に反映される。  
 
-#**最後に**  
+### **最後に**  
 Vimで書いているのリアルタイムでブラウザに反映されるのはとても良かった。Markdownで書くことが少しずつ増えているため、もっとMarkdown記法勉強しよう。  
 
 
