--- a/_posts/2015-07-12-1.md
+++ b/_posts/2015-07-12-1.md
@@ -8,26 +8,22 @@ tags: [Vim,chrome]
 ブラウザでVimのような操作をしたいと思いChromeのブラグインの”[Vimium](https://chrome.google.com/webstore/detail/vimium/dbepggeogbaibhgnhhndojpepiihcmeb)”というのを入れた。  
 <!--more-->
 
-#**主なキー操作について**  
+### **主なキー操作について**  
 
 
 | コマンド     | 内容                 |
-| :------------: | :--------------------: |
-| f	           | 文字のマッピング     |
-| gg		   | 最上部に移動         |
+| :----------: | :------------------: |
+| f            | 文字のマッピング     |
+| gg           | 最上部に移動         |
 | G            | 最下部に移動         |
 | j            | 下スクロール         |
-| k			   | 上スクロール　　     |
+| k            | 上スクロール         |
 | H            | 戻る                 |
 | L            | 進む                 |
 | t            | 新規タブ             |
-| x			   | タブの削除		      |
+| x            | タブの削除           |
 | b            | ブックマークの検索   |
 | ?            | ショートカットリスト |
 
-まだまだあるけどとりあえずはこれかな。  
-
-その前にきちんとしたVimの使い方覚えよう  
-
-
-
+まだまだあるけどとりあえずはこれかな.  
+その前にきちんとしたVimの使い方覚えよう.
